force-app/main/default/objects/Payment_Plan__c/Payment_Plan__c.object-meta.xml
<CustomObject>
    <description>Payment Plan object determine payment details of opportunity</description>
    <label>Payment Plan</label>
    <nameField>
        <label>Payment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>