force-app/main/default/objects/Payment_Plan__c/fields/Deposit_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Mandatory</label>
    <type>Checkbox</type>
</CustomField>