force-app/main/default/objects/Payment_Plan__c/fields/Financing__c.field-meta.xml
<CustomField>
    <fullName>Financing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financing</label>
    <type>Checkbox</type>
</CustomField>